updata array class

--- a/titmouse2d/titmouse2d.vcxproj
+++ b/titmouse2d/titmouse2d.vcxproj
@@ -140,10 +140,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Size2.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Array.h" />
-    <ClInclude Include="Vector2.h" />
+    <ClInclude Include="Array.hpp" />
+    <ClInclude Include="Size2.h" />
+    <ClInclude Include="Vector2.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
