--- a/titmouse2d/titmouse2d.vcxproj
+++ b/titmouse2d/titmouse2d.vcxproj
@@ -139,14 +139,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="Size2.cpp" />
+    <ClCompile Include="src\Lagrangian\NeighborSearcher2.cpp" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Size2.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Array.hpp" />
-    <ClInclude Include="Size2.h" />
+    <ClInclude Include="src\Array.hpp" />
+    <ClInclude Include="src\ConstVar.h" />
+    <ClInclude Include="src\Lagrangian\NeighborSearcher2.h" />
+    <ClInclude Include="src\Size2.h" />
     <ClInclude Include="src\Lagrangian\ParticleSystemData2.h" />
-    <ClInclude Include="Vector2.hpp" />
+    <ClInclude Include="src\Vector2.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
