--- a/titmouse2d/titmouse2d.vcxproj
+++ b/titmouse2d/titmouse2d.vcxproj
@@ -146,14 +146,15 @@
     <ClCompile Include="src\Size2.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="SparseMatrix.hpp" />
     <ClInclude Include="src\Array.hpp" />
     <ClInclude Include="src\ConstVar.h" />
     <ClInclude Include="src\Lagrangian\NeighborSearcher2.h" />
     <ClInclude Include="src\Lagrangian\ParticleSystemSolver2.h" />
     <ClInclude Include="src\DenseMatrix.hpp" />
+    <ClInclude Include="src\Matrix.hpp" />
     <ClInclude Include="src\Size2.h" />
     <ClInclude Include="src\Lagrangian\ParticleSystemData2.h" />
+    <ClInclude Include="src\SparseMatrix.hpp" />
     <ClInclude Include="src\Vector2.hpp" />
     <ClInclude Include="src\VectorN.hpp" />
   </ItemGroup>
