--- a/titmouse2d/titmouse2d.vcxproj
+++ b/titmouse2d/titmouse2d.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="src\Lagrangian\NeighborSearcher2.cpp" />
     <ClCompile Include="src\Lagrangian\ParticleSystemData2.cpp" />
     <ClCompile Include="src\Lagrangian\ParticleSystemSolver2.cpp" />
+    <ClCompile Include="src\LinearSystem\IterativeSystemSolver.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Size2.cpp" />
   </ItemGroup>
@@ -151,6 +152,10 @@
     <ClInclude Include="src\Lagrangian\NeighborSearcher2.h" />
     <ClInclude Include="src\Lagrangian\ParticleSystemSolver2.h" />
     <ClInclude Include="src\DenseMatrix.hpp" />
+    <ClInclude Include="src\LinearSystem\GaussSeidelSolver.hpp" />
+    <ClInclude Include="src\LinearSystem\IterativeSystemSolver.h" />
+    <ClInclude Include="src\LinearSystem\JacobiSolver.hpp" />
+    <ClInclude Include="src\LinearSystem\SteepestDescentSolver.hpp" />
     <ClInclude Include="src\Matrix.hpp" />
     <ClInclude Include="src\Size2.h" />
     <ClInclude Include="src\Lagrangian\ParticleSystemData2.h" />
