--- a/titmouse2d/titmouse2d.vcxproj
+++ b/titmouse2d/titmouse2d.vcxproj
@@ -157,10 +157,11 @@
     <ClInclude Include="src\DenseMatrix.hpp" />
     <ClInclude Include="src\LinearSystem\ConjugateGradientSolver.hpp" />
     <ClInclude Include="src\LinearSystem\GaussSeidelSolver.hpp" />
-    <ClInclude Include="src\LinearSystem\ICCGSolver.hpp" />
+    <ClInclude Include="src\LinearSystem\MICCGSolver.hpp" />
     <ClInclude Include="src\LinearSystem\IterativeSystemSolver.h" />
     <ClInclude Include="src\LinearSystem\JacobiSolver.hpp" />
     <ClInclude Include="src\LinearSystem\PreConjugateGradientSolver.hpp" />
+    <ClInclude Include="src\LinearSystem\SORsolver.hpp" />
     <ClInclude Include="src\LinearSystem\SteepestDescentSolver.hpp" />
     <ClInclude Include="src\Matrix.hpp" />
     <ClInclude Include="src\Size2.h" />
