--- a/titmouse2d/titmouse2d.vcxproj
+++ b/titmouse2d/titmouse2d.vcxproj
@@ -142,12 +142,15 @@
     <ClCompile Include="src\demo\IterativeSolverTest\IterativeSolverTest.cpp" />
     <ClCompile Include="src\demo\MarchingCube2D\MarchingCube2DTest.cpp" />
     <ClCompile Include="src\Eulerian\CellCenteredScalarGrid2.cpp" />
+    <ClCompile Include="src\Eulerian\FaceCenteredGrid2.cpp" />
     <ClCompile Include="src\Eulerian\fdm_utils.hpp" />
     <ClCompile Include="src\Eulerian\Field2.cpp" />
     <ClCompile Include="src\Eulerian\Grid2.cpp" />
     <ClCompile Include="src\Eulerian\MarchingCubes2.cpp" />
     <ClCompile Include="src\Eulerian\ScalarField2.cpp" />
     <ClCompile Include="src\Eulerian\ScalarGrid2.cpp" />
+    <ClCompile Include="src\Eulerian\VectorField2.cpp" />
+    <ClCompile Include="src\Eulerian\VectorGrid2.cpp" />
     <ClCompile Include="src\Eulerian\VertexCenteredScalarGrid2.cpp" />
     <ClCompile Include="src\Lagrangian\NeighborSearcher2.cpp" />
     <ClCompile Include="src\Lagrangian\ParticleSystemData2.cpp" />
@@ -162,13 +165,17 @@
     <ClInclude Include="src\ArrayPtr.hpp" />
     <ClInclude Include="src\ConstVar.h" />
     <ClInclude Include="src\DenseMatrixPtr.hpp" />
+    <ClInclude Include="src\Eulerian\ArraySampler2.hpp" />
     <ClInclude Include="src\Eulerian\CellCenteredScalarGrid2.h" />
+    <ClInclude Include="src\Eulerian\FaceCenteredGrid2.h" />
     <ClInclude Include="src\Eulerian\Field2.h" />
     <ClInclude Include="src\Eulerian\Grid2.h" />
     <ClInclude Include="src\Eulerian\MarchingCubes2.h" />
     <ClInclude Include="src\Eulerian\MarchingCubesTable2.h" />
     <ClInclude Include="src\Eulerian\ScalarField2.h" />
     <ClInclude Include="src\Eulerian\ScalarGrid2.h" />
+    <ClInclude Include="src\Eulerian\VectorField2.h" />
+    <ClInclude Include="src\Eulerian\VectorGrid2.h" />
     <ClInclude Include="src\Eulerian\VertexCenteredScalarGrid2.h" />
     <ClInclude Include="src\Lagrangian\NeighborSearcher2.h" />
     <ClInclude Include="src\Lagrangian\ParticleSystemSolver2.h" />
