--- a/titmouse2d/titmouse2d.vcxproj
+++ b/titmouse2d/titmouse2d.vcxproj
@@ -139,6 +139,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\boundingbox2.cpp" />
+    <ClCompile Include="src\demo\freefallingUsingPicTest\freefallingUsingPicTest.cpp.cpp" />
     <ClCompile Include="src\demo\IterativeSolverTest\IterativeSolverTest.cpp" />
     <ClCompile Include="src\demo\MarchingCube2D\MarchingCube2DTest.cpp" />
     <ClCompile Include="src\Eulerian\CellCenteredScalarGrid2.cpp" />
@@ -147,6 +149,7 @@
     <ClCompile Include="src\Eulerian\Field2.cpp" />
     <ClCompile Include="src\Eulerian\Grid2.cpp" />
     <ClCompile Include="src\Eulerian\GridFluidSolver2.cpp" />
+    <ClCompile Include="src\Eulerian\GridSystemData2.cpp" />
     <ClCompile Include="src\Eulerian\MarchingCubes2.cpp" />
     <ClCompile Include="src\Eulerian\ScalarField2.cpp" />
     <ClCompile Include="src\Eulerian\ScalarGrid2.cpp" />
@@ -165,6 +168,7 @@
     <ClInclude Include="src\Array2.hpp" />
     <ClInclude Include="src\Array2Ptr.hpp" />
     <ClInclude Include="src\ArrayPtr.hpp" />
+    <ClInclude Include="src\boundingbox2.h" />
     <ClInclude Include="src\ConstVar.h" />
     <ClInclude Include="src\DenseMatrixPtr.hpp" />
     <ClInclude Include="src\Eulerian\ArraySampler2.hpp" />
@@ -173,6 +177,7 @@
     <ClInclude Include="src\Eulerian\Field2.h" />
     <ClInclude Include="src\Eulerian\Grid2.h" />
     <ClInclude Include="src\Eulerian\GridFluidSolver2.h" />
+    <ClInclude Include="src\Eulerian\GridSystemData2.h" />
     <ClInclude Include="src\Eulerian\MarchingCubes2.h" />
     <ClInclude Include="src\Eulerian\MarchingCubesTable2.h" />
     <ClInclude Include="src\Eulerian\ScalarField2.h" />
