--- a/titmouse2d/titmouse2d.vcxproj
+++ b/titmouse2d/titmouse2d.vcxproj
@@ -88,6 +88,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -140,6 +141,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\boundingbox2.cpp" />
+    <ClCompile Include="src\Collider2.cpp" />
     <ClCompile Include="src\demo\freefallingUsingPicTest\freefallingUsingPicTest.cpp.cpp" />
     <ClCompile Include="src\demo\IterativeSolverTest\IterativeSolverTest.cpp" />
     <ClCompile Include="src\demo\MarchingCube2D\MarchingCube2DTest.cpp" />
@@ -156,6 +158,9 @@
     <ClCompile Include="src\Eulerian\VectorField2.cpp" />
     <ClCompile Include="src\Eulerian\VectorGrid2.cpp" />
     <ClCompile Include="src\Eulerian\VertexCenteredScalarGrid2.cpp" />
+    <ClCompile Include="src\Geometry\Box2.cpp" />
+    <ClCompile Include="src\Geometry\ExplicitSurface2.cpp" />
+    <ClCompile Include="src\Geometry\Surface2.cpp" />
     <ClCompile Include="src\Hybrid\PicSolver2.cpp" />
     <ClCompile Include="src\Lagrangian\NeighborSearcher2.cpp" />
     <ClCompile Include="src\Lagrangian\ParticleSystemData2.cpp" />
@@ -169,6 +174,7 @@
     <ClInclude Include="src\Array2Ptr.hpp" />
     <ClInclude Include="src\ArrayPtr.hpp" />
     <ClInclude Include="src\boundingbox2.h" />
+    <ClInclude Include="src\Collider2.h" />
     <ClInclude Include="src\ConstVar.h" />
     <ClInclude Include="src\DenseMatrixPtr.hpp" />
     <ClInclude Include="src\Eulerian\ArraySampler2.hpp" />
@@ -185,6 +191,9 @@
     <ClInclude Include="src\Eulerian\VectorField2.h" />
     <ClInclude Include="src\Eulerian\VectorGrid2.h" />
     <ClInclude Include="src\Eulerian\VertexCenteredScalarGrid2.h" />
+    <ClInclude Include="src\Geometry\Box2.h" />
+    <ClInclude Include="src\Geometry\ExplicitSurface2.h" />
+    <ClInclude Include="src\Geometry\Surface2.h" />
     <ClInclude Include="src\Hybrid\PicSolver2.h" />
     <ClInclude Include="src\Lagrangian\NeighborSearcher2.h" />
     <ClInclude Include="src\Lagrangian\ParticleSystemSolver2.h" />
