--- a/titmouse2d/titmouse2d.vcxproj.filters
+++ b/titmouse2d/titmouse2d.vcxproj.filters
@@ -96,6 +96,12 @@
     <ClCompile Include="src\Collider2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\ColliderSet2.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Geometry\Plane2.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Vector2.hpp">
@@ -234,6 +240,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\Geometry\Box2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ColliderSet2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Geometry\Plane2.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
