--- a/titmouse2d/titmouse2d.vcxproj
+++ b/titmouse2d/titmouse2d.vcxproj
@@ -143,11 +143,13 @@
     <ClCompile Include="src\boundingbox2.cpp" />
     <ClCompile Include="src\Collider2.cpp" />
     <ClCompile Include="src\ColliderSet2.cpp" />
+    <ClCompile Include="src\demo\AdvectionTest\AdvectionTest.cpp" />
     <ClCompile Include="src\demo\FlipTest\FlipTest.cpp" />
     <ClCompile Include="src\demo\PicTest\Pictest.cpp" />
     <ClCompile Include="src\demo\freefalling\freefalling.cpp" />
     <ClCompile Include="src\demo\IterativeSolverTest\IterativeSolverTest.cpp" />
     <ClCompile Include="src\demo\MarchingCube2D\MarchingCube2DTest.cpp" />
+    <ClCompile Include="src\Eulerian\AdvectionSolver2.cpp" />
     <ClCompile Include="src\Eulerian\CellCenteredScalarGrid2.cpp" />
     <ClCompile Include="src\Eulerian\FaceCenteredGrid2.cpp" />
     <ClCompile Include="src\Eulerian\fdm_utils.hpp" />
@@ -183,10 +185,14 @@
     <ClInclude Include="src\boundingbox2.h" />
     <ClInclude Include="src\Collider2.h" />
     <ClInclude Include="src\ColliderSet2.h" />
+    <ClInclude Include="src\Color3.hpp" />
     <ClInclude Include="src\ConstVar.h" />
     <ClInclude Include="src\DenseMatrixPtr.hpp" />
+    <ClInclude Include="src\Eulerian\AdvectionSolver2.h" />
     <ClInclude Include="src\Eulerian\ArraySampler2.hpp" />
     <ClInclude Include="src\Eulerian\CellCenteredScalarGrid2.h" />
+    <ClInclude Include="src\Eulerian\CellCenteredVectorGrid2.hpp" />
+    <ClInclude Include="src\Eulerian\CollocatedVectorGrid2.hpp" />
     <ClInclude Include="src\Eulerian\FaceCenteredGrid2.h" />
     <ClInclude Include="src\Eulerian\Field2.h" />
     <ClInclude Include="src\Eulerian\Grid2.h" />
